added tests for Retry and renamed folders