@@ -27,14 +27,15 @@
 
 	<modules>
 		<module>config</module>
-		<module>core</module>
-		<module>module-http-core</module>
+		<module>server-core</module>
+		<module>http-common</module>
 		<module>module-http</module>
-		<module>module-jaxrs</module>
-		<module>module-websocket</module>
+		<module>plugin-jaxrs</module>
+		<module>plugin-websocket</module>
 		<module>jwt-auth</module>
 		<module>fault-tolerance</module>
 		<module>complete</module>
+		<module>test-suite</module>
 	</modules>
 
 	<build>
@@ -55,21 +56,21 @@
 					<artifactId>maven-javadoc-plugin</artifactId>
 					<version>3.1.0</version>
 				</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-scm-plugin</artifactId>
-				<version>1.11.2</version>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.3</version>
-			</plugin>
-			<plugin>
-				<groupId>org.sonatype.plugins</groupId>
-				<artifactId>nexus-staging-maven-plugin</artifactId>
-				<version>1.6.8</version>
-			</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-scm-plugin</artifactId>
+					<version>1.11.2</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>2.5.3</version>
+				</plugin>
+				<plugin>
+					<groupId>org.sonatype.plugins</groupId>
+					<artifactId>nexus-staging-maven-plugin</artifactId>
+					<version>1.6.8</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
@@ -136,6 +137,16 @@
 					<autoReleaseAfterClose>true</autoReleaseAfterClose>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M3</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -191,18 +202,18 @@
 	<dependencies>
 
 		<!-- CDI -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>javax.enterprise</groupId> -->
-<!-- 			<artifactId>cdi-api</artifactId> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>javax.annotation</groupId> -->
-<!-- 			<artifactId>javax.annotation-api</artifactId> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.apache.openwebbeans</groupId> -->
-<!-- 			<artifactId>openwebbeans-se</artifactId> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>javax.enterprise</groupId> -->
+		<!-- <artifactId>cdi-api</artifactId> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>javax.annotation</groupId> -->
+		<!-- <artifactId>javax.annotation-api</artifactId> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.openwebbeans</groupId> -->
+		<!-- <artifactId>openwebbeans-se</artifactId> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.jboss.weld.se</groupId>
 			<artifactId>weld-se-shaded</artifactId>
